# loadlib

./: build.gradle  gradle.properties  settings.gradle
Dynamic/: build.gradle
Dynamic/src/androidTest/java/dynamic/impl/: ExampleInstrumentedTest.java
Dynamic/src/main/: AndroidManifest.xml
Dynamic/src/main/java/dynamic/impl/: Dynamic.java
Dynamic/src/test/java/dynamic/impl/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  ScopedPthreadMutexLocker.h  demo.c  dlfcn.cpp  dlfcn.h  libc_logging.cpp  libc_logging.h  linker.cpp  linker.h  linker_phdr.cpp  linker_phdr.h  test.cpp  zybornit_loadlib_LoadLibrary.cpp  zybornit_loadlib_LoadLibrary.h
app/src/main/jni/distribution/: test.h
app/src/main/jni/inject/: CMakeLists.txt  elfutils.cpp  elfutils.h  hook_function.cpp  inject.c  inject.cpp  inject.h  zybornit_inject_LoadInjectLib.cpp  zybornit_inject_LoadInjectLib.h
app/src/main/jni/machine/: _types.h
app/src/main/jni/otherlib/: CMakeLists.txt  test.h  test1.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: ids.xml  strings.xml
app/src/main/zybornit/inject/: LoadInjectLib.java
app/src/main/zybornit/loadlib/: DisplayHandler.java  FTP.java  LoadLibrary.java  LoadlibApplication.java  MainActivity.java  ProgressInputStream.java  ProxyApplication.java  fileop.java
dexshell/src/main/java/dex/tool/: DexShellTool.java
dynamic.interfaces/: build.gradle
dynamic.interfaces/src/androidTest/java/dynamic/interfaces/: ExampleInstrumentedTest.java
dynamic.interfaces/src/main/: AndroidManifest.xml
dynamic.interfaces/src/main/java/dynamic/interfaces/: IDynamic.java
dynamic.interfaces/src/main/res/values/: strings.xml
dynamic.interfaces/src/test/java/dynamic/interfaces/: ExampleUnitTest.java
